refactor: make ingestion batch-only
